--- a/KuranX.App/Core/Pages/SubjectItemFrame.xaml
+++ b/KuranX.App/Core/Pages/SubjectItemFrame.xaml
@@ -47,7 +47,7 @@
                             <ItemsControl  Grid.Row="0" Grid.Column="0" x:Name="mvc1">
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
-                                        <Button Style="{DynamicResource selectConnectAyet}" Content="{Binding IntegrityName}" Uid="{Binding IntegrityId}" Tag="ArrowForwardOutline" Click="noteDetailPopup_Click" />
+                                        <Button Style="{DynamicResource selectConnectAyet}" Content="{Binding NoteHeader}" Uid="{Binding NotesId}" Tag="ArrowForwardOutline" Click="noteDetailPopup_Click" />
                                     </DataTemplate>
                                 </ItemsControl.ItemTemplate>
                             </ItemsControl>
@@ -55,7 +55,7 @@
                             <ItemsControl  Grid.Row="0" Grid.Column="1" x:Name="mvc2">
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
-                                        <Button Style="{DynamicResource selectConnectAyet}" Content="{Binding IntegrityName}" Uid="{Binding IntegrityId}" Tag="ArrowForwardOutline" Click="noteDetailPopup_Click" />
+                                        <Button Style="{DynamicResource selectConnectAyet}" Content="{Binding NoteHeader}" Uid="{Binding NotesId}" Tag="ArrowForwardOutline" Click="noteDetailPopup_Click" />
                                     </DataTemplate>
                                 </ItemsControl.ItemTemplate>
                             </ItemsControl>
@@ -63,7 +63,7 @@
                             <ItemsControl  Grid.Row="1" Grid.Column="0" x:Name="mvc3">
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
-                                        <Button Style="{DynamicResource selectConnectAyet}" Content="{Binding IntegrityName}" Uid="{Binding IntegrityId}" Tag="ArrowForwardOutline" Click="noteDetailPopup_Click" />
+                                        <Button Style="{DynamicResource selectConnectAyet}" Content="{Binding NoteHeader}" Uid="{Binding NotesId}" Tag="ArrowForwardOutline" Click="noteDetailPopup_Click" />
                                     </DataTemplate>
                                 </ItemsControl.ItemTemplate>
                             </ItemsControl>
@@ -71,7 +71,7 @@
                             <ItemsControl  Grid.Row="1" Grid.Column="1" x:Name="mvc4">
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
-                                        <Button Style="{DynamicResource selectConnectAyet}" Content="{Binding IntegrityName}" Uid="{Binding IntegrityId}" Tag="ArrowForwardOutline" Click="noteDetailPopup_Click" />
+                                        <Button Style="{DynamicResource selectConnectAyet}" Content="{Binding NoteHeader}" Uid="{Binding NotesId}" Tag="ArrowForwardOutline" Click="noteDetailPopup_Click" />
                                     </DataTemplate>
                                 </ItemsControl.ItemTemplate>
                             </ItemsControl>
@@ -79,7 +79,7 @@
                             <ItemsControl  Grid.Row="2" Grid.Column="0" x:Name="mvc5">
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
-                                        <Button Style="{DynamicResource selectConnectAyet}" Content="{Binding IntegrityName}" Uid="{Binding IntegrityId}" Tag="ArrowForwardOutline" Click="noteDetailPopup_Click" />
+                                        <Button Style="{DynamicResource selectConnectAyet}" Content="{Binding NoteHeader}" Uid="{Binding NotesId}" Tag="ArrowForwardOutline" Click="noteDetailPopup_Click" />
                                     </DataTemplate>
                                 </ItemsControl.ItemTemplate>
                             </ItemsControl>
@@ -87,7 +87,7 @@
                             <ItemsControl  Grid.Row="2" Grid.Column="1" x:Name="mvc6">
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
-                                        <Button Style="{DynamicResource selectConnectAyet}" Content="{Binding IntegrityName}" Uid="{Binding IntegrityId}" Tag="ArrowForwardOutline" Click="noteDetailPopup_Click" />
+                                        <Button Style="{DynamicResource selectConnectAyet}" Content="{Binding NoteHeader}" Uid="{Binding NotesId}" Tag="ArrowForwardOutline" Click="noteDetailPopup_Click" />
                                     </DataTemplate>
                                 </ItemsControl.ItemTemplate>
                             </ItemsControl>
@@ -95,12 +95,12 @@
                             <ItemsControl  Grid.Row="3" Grid.Column="0" x:Name="mvc7">
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
-                                        <Button Style="{DynamicResource selectConnectAyet}" Content="{Binding IntegrityName}" Uid="{Binding IntegrityId}" Tag="ArrowForwardOutline" Click="noteDetailPopup_Click" />
+                                        <Button Style="{DynamicResource selectConnectAyet}" Content="{Binding NoteHeader}" Uid="{Binding NotesId}" Tag="ArrowForwardOutline" Click="noteDetailPopup_Click" />
                                     </DataTemplate>
                                 </ItemsControl.ItemTemplate>
                             </ItemsControl>
 
-                            <Button  x:Name="allShowMeaningButton" Visibility="Hidden" Grid.Row="3" Grid.Column="1" Style="{DynamicResource selectConnectAyet}" Content="Hepsini Göster" Tag="ArrowForwardOutline" />
+                            <Button  x:Name="allShowNoteButton" Visibility="Hidden" Grid.Row="3" Grid.Column="1" Style="{DynamicResource selectConnectAyet}" Content="Hepsini Göster" Tag="ArrowForwardOutline" Click="allShowNoteButton_Click" />
 
                             <Button x:Name="noteSubjectAddButtonP"  Grid.Column="0" Grid.Row="4" Style="{DynamicResource selectConnectAyet}" Content="Yeni Not Al" Tag="Link2" Click="noteSubjectAddButtonP_Click" />
                             <Button Grid.Column="1" Grid.Row="4" Style="{DynamicResource selectConnectAyet}" Content="Vazgeç" Tag="Close" Uid="addNewConnect"  Click="popupClosed_Click" />
@@ -160,6 +160,73 @@
                                 <Button x:Name="addNoteButton" Style="{DynamicResource popupDefaultButtonBstrp}" Tag="FileEarmarkCheck" Content="Ekle" HorizontalAlignment="Center" Click="addNoteButton_Click" />
                                 <Button  Style="{DynamicResource popupDefaultButtonClosed}" Tag="CloseBig" Content="Vazgeç" Uid="noteAddPopup" HorizontalAlignment="Center" Click="popupClosed_Click" />
                             </StackPanel>
+                        </Grid>
+                    </Grid>
+                </Grid>
+            </Border>
+        </Popup>
+
+        <Popup x:Name="noteConnectDetailText" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="500" Height="350" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+            <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="480" Height="330">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50" />
+                        <RowDefinition Height="280" />
+                    </Grid.RowDefinitions>
+                    <Border  Grid.Row="0" Style="{DynamicResource headerBorderTemp}">
+                        <TextBlock MaxWidth="460" TextWrapping="Wrap" TextTrimming="CharacterEllipsis" x:Name="meaningDetailTextHeader" Text="Connect 1 Bağlantısı" Style="{DynamicResource popupHeaderText}" />
+                    </Border>
+                    <Grid Grid.Row="1">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="210" />
+
+                                <RowDefinition Height="60" />
+                            </Grid.RowDefinitions>
+
+                            <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" Height="190" Padding="10">
+                                <TextBlock x:Name="noteOpenDetailText" Foreground="#383C41" FontFamily="{DynamicResource PoppinsMedium}" TextWrapping="Wrap" Grid.Row="0"  VerticalAlignment="Top" />
+                            </ScrollViewer>
+
+                            <Button x:Name="noteOpenDetailTextBack" Grid.Row="2" Style="{DynamicResource selectConnectAyet}" Content="Geri Dön" Tag="ArrowBack" Uid="meainingConnect" Click="noteOpenDetailTextBack_Click" />
+                        </Grid>
+                    </Grid>
+                </Grid>
+            </Border>
+        </Popup>
+
+        <Popup x:Name="notesAllShowPopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="500" Height="600" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
+
+            <Border Style="{DynamicResource defaultBorderShadowEffect}" Width="480" Height="580">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50" />
+                        <RowDefinition Height="530" />
+                    </Grid.RowDefinitions>
+                    <Border  Grid.Row="0" Style="{DynamicResource headerBorderTemp}">
+                        <TextBlock Text="Tüm Bağlantılar" Style="{DynamicResource popupHeaderText}" />
+                    </Border>
+                    <Grid Grid.Row="1">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="56" />
+                            </Grid.RowDefinitions>
+
+                            <ScrollViewer Grid.ColumnSpan="2" Grid.Row="0" Padding="20">
+                                <StackPanel x:Name="notesAllShowPopupStackPanel">
+                                </StackPanel>
+                            </ScrollViewer>
+
+                            <Button Grid.Column="0" Grid.Row="4" Style="{DynamicResource selectConnectAyet}" Content="Yeni Not Al" Tag="Link2" Click="noteSubjectAddButtonP_Click" />
+                            <Button Grid.Column="1" Grid.Row="4" Style="{DynamicResource selectConnectAyet}" Content="Vazgeç" Tag="Close" Uid="notesAllShowPopup" Click="popupClosed_Click" />
                         </Grid>
                     </Grid>
                 </Grid>
