--- a/KuranX.App/Core/Pages/TestFrame.xaml
+++ b/KuranX.App/Core/Pages/TestFrame.xaml
@@ -12,25 +12,11 @@
     <Grid>
 
         <Label>------------- TEST PAGE -------------</Label>
+        <ComboBox x:Name="comboBox" HorizontalAlignment="Left" SelectedIndex="0" Margin="897,146,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="comboBox_SelectionChanged">
 
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="50" />
-                <ColumnDefinition Width="50" />
-                <ColumnDefinition Width="840" />
-                <ColumnDefinition Width="50" />
-                <ColumnDefinition Width="50" />
-            </Grid.ColumnDefinitions>
-
-            <Button Grid.Column="0" x:Name="NavUpdatePrev" Style="{DynamicResource versesNavButtonNext}" Tag="AngleDoubleLeft" Height="30" />
-            <Button Grid.Column="1" x:Name="NavUpdatePrevSingle" Style="{DynamicResource versesNavButtonNext}" Tag="AngleLeft" Height="30" />
-            <Border Grid.Column="2" Background="#FFF"  Height="30" Panel.ZIndex="2" CornerRadius="5">
-                <Image gif:ImageBehavior.AnimatedSource="/Resource/Images/Gif/Pulse300.gif" Width="50"  RenderOptions.BitmapScalingMode="HighQuality" Margin="395,0,395,0" />
-            </Border>
-            <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Center">
-            </StackPanel>
-            <Button Grid.Column="3" x:Name="NavUpdateNextSingle" Style="{DynamicResource versesNavButtonNext}" Tag="AngleRight" Height="30" />
-            <Button Grid.Column="4" x:Name="NavUpdateNext" Style="{DynamicResource versesNavButtonNext}" Tag="AngleDoubleRight" Height="30" />
-        </Grid>
+            <ComboBoxItem Content="va" Name="xx"></ComboBoxItem>
+            <ComboBoxItem Content="x2" Name="x1"></ComboBoxItem>
+            <ComboBoxItem Content="x3" Name="x2"></ComboBoxItem>
+        </ComboBox>
     </Grid>
 </Page>
