--- a/KuranX.App/Core/ResourceXaml/versesDesing.xaml
+++ b/KuranX.App/Core/ResourceXaml/versesDesing.xaml
@@ -692,7 +692,7 @@
         </Style.Triggers>
     </Style>
 
-    <Style x:Key="stackpanelUseAniEffect" TargetType="StackPanel">
+    <Style x:Key="aniEffectFadeStack" TargetType="StackPanel">
 
         <Style.Triggers>
             <Trigger Property="Visibility" Value="Visible">
@@ -700,7 +700,23 @@
                     <BeginStoryboard>
                         <Storyboard>
                             <DoubleAnimation Storyboard.TargetProperty="Opacity"
-                             From="0.0" To="1.0" Duration="0:0:0.3" />
+                             From="0.0" To="1.0" Duration="0:0:0.4" />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </Trigger.EnterActions>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="aniEffectFadeGrid" TargetType="Grid">
+
+        <Style.Triggers>
+            <Trigger Property="Visibility" Value="Visible">
+                <Trigger.EnterActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetProperty="Opacity"
+                             From="0.0" To="1.0" Duration="0:0:0.4" />
                         </Storyboard>
                     </BeginStoryboard>
                 </Trigger.EnterActions>
