--- a/KuranX.App/App.xaml
+++ b/KuranX.App/App.xaml
@@ -17,16 +17,17 @@
             <FontFamily x:Key="XBZarBold">pack://application:,,,/Resource/Fonts/XBZarBd.ttf#XBZar</FontFamily>
 
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/defaultDesign.xaml"></ResourceDictionary>
-                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/splashDesign.xaml"></ResourceDictionary>
-                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/loginDesign.xaml"></ResourceDictionary>
-                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/homeDesign.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/defaultDesign.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/splashDesign.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/loginDesign.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/homeDesign.xaml" />
 
-                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/popupDesing.xaml"></ResourceDictionary>
-                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/subjectDesing.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/popupDesing.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/subjectDesing.xaml" />
 
-                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/suresDesing.xaml"></ResourceDictionary>
-                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/versesDesing.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/suresDesing.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/versesDesing.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Core/ResourceXaml/libraryDesing.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
