--- a/KuranX.App/Core/Pages/LoginF/registerFrame.xaml
+++ b/KuranX.App/Core/Pages/LoginF/registerFrame.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="KuranX.App.Core.Pages.registerFrame"
+﻿<Page x:Class="KuranX.App.Core.Pages.LoginF.registerFrame"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
