--- a/KuranX.App/Core/Pages/SubjectF/SubjectFrame.xaml
+++ b/KuranX.App/Core/Pages/SubjectF/SubjectFrame.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="KuranX.App.Core.Pages.SubjectFrame"
+﻿<Page x:Class="KuranX.App.Core.Pages.SubjectF.SubjectFrame"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -16,6 +16,10 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="85" />
         </Grid.RowDefinitions>
+
+        <Grid x:Name="loadinGifContent" Grid.Row="1" Background="#FAFAFA" Panel.ZIndex="5">
+            <Image gif:ImageBehavior.AnimatedSource="/Resource/Images/Gif/Spinner800.gif" Width="250" Height="250"  RenderOptions.BitmapScalingMode="HighQuality" />
+        </Grid>
 
         <Popup x:Name="alph" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="460" Height="200" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
             <Border  Style="{DynamicResource defaultBorderShadowEffect}" Width="440" Height="180">
@@ -166,20 +170,30 @@
             </Border>
         </Popup>
 
-        <Border Grid.Row="0" Padding="20">
-            <StackPanel Orientation="Vertical" HorizontalAlignment="Left">
-                <TextBlock Text="KONULARIM" Foreground="#1C1E2F" FontSize="36" FontFamily="{DynamicResource PoppinsSemiBold}" />
-                <StackPanel Orientation="Horizontal" Margin="0 15 0 15 ">
-                    <StackPanel Grid.Column="0" VerticalAlignment="Center">
-                        <Border Style="{DynamicResource subjectTabSearchBorder}">
-                            <StackPanel Orientation="Horizontal">
-                                <TextBox Style="{DynamicResource subjectTabSearchText}" />
-                                <Button Style="{DynamicResource subjectTabSearchButton}" />
-                            </StackPanel>
-                        </Border>
+        <Border Grid.Row="0" Padding="20 10 20 10">
+            <StackPanel Orientation="Vertical">
+                <Grid>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50" />
+                        <RowDefinition Height="70" />
+                        <RowDefinition Height="20" />
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Row="0" Text="KONULARIM" Foreground="#1C1E2F" FontSize="36" FontFamily="{DynamicResource PoppinsSemiBold}" />
+                    <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0 15 0 0 ">
+                        <StackPanel VerticalAlignment="Center">
+                            <Border Style="{DynamicResource subjectTabSearchBorder}">
+
+                                <StackPanel Orientation="Horizontal">
+                                    <TextBox x:Name="SearchData" Style="{DynamicResource subjectTabSearchText}" TextChanged="SearchData_TextChanged" LostFocus="SearchData_LostFocus" />
+                                    <Button x:Name="SearchBtn" Style="{DynamicResource subjectTabSearchButton}" Click="SearchBtn_Click" />
+                                </StackPanel>
+                            </Border>
+                        </StackPanel>
+                        <Button Height="33" x:Name="addSubjectButton" Content="Konu Başlığı Ekle" Tag="Plus" Style="{DynamicResource subjectActionMainTabButtonAdd}" Click="addSubjectButton_Click" />
                     </StackPanel>
-                    <Button x:Name="addSubjectButton" Content="Konu Başlığı Ekle" Tag="Plus" Style="{DynamicResource subjectActionMainTabButtonAdd}" Click="addSubjectButton_Click" />
-                </StackPanel>
+                    <TextBlock x:Name="searchErrMsgTxt" Visibility="Hidden" Grid.Row="2" Text="Yeterince Uzun Değil Minimum 3 Karakter Olmalı" Margin="5 0 0 0" FontSize="10" Foreground="#DC3545" FontFamily="{DynamicResource PoppinsMedium}" />
+                </Grid>
             </StackPanel>
         </Border>
 
@@ -213,7 +227,7 @@
                                         </Border>
 
                                         <Border Width="38" Height="50">
-                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Click="openSubjectFolder_Click" />
+                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Background="{Binding SubjectColor}" Click="openSubjectFolder_Click" />
                                         </Border>
                                     </StackPanel>
                                 </Border>
@@ -238,7 +252,7 @@
                                         </Border>
 
                                         <Border Width="38" Height="50">
-                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Click="openSubjectFolder_Click" />
+                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Background="{Binding SubjectColor}" Click="openSubjectFolder_Click" />
                                         </Border>
                                     </StackPanel>
                                 </Border>
@@ -264,7 +278,7 @@
                                         </Border>
 
                                         <Border Width="38" Height="50">
-                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Click="openSubjectFolder_Click" />
+                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Background="{Binding SubjectColor}" Click="openSubjectFolder_Click" />
                                         </Border>
                                     </StackPanel>
                                 </Border>
@@ -289,7 +303,7 @@
                                         </Border>
 
                                         <Border Width="38" Height="50">
-                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Click="openSubjectFolder_Click" />
+                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Background="{Binding SubjectColor}" Click="openSubjectFolder_Click" />
                                         </Border>
                                     </StackPanel>
                                 </Border>
@@ -314,7 +328,7 @@
                                         </Border>
 
                                         <Border Width="38" Height="50">
-                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Click="openSubjectFolder_Click" />
+                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Background="{Binding SubjectColor}" Click="openSubjectFolder_Click" />
                                         </Border>
                                     </StackPanel>
                                 </Border>
@@ -338,7 +352,7 @@
                                         </Border>
 
                                         <Border Width="38" Height="50">
-                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Click="openSubjectFolder_Click" />
+                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Background="{Binding SubjectColor}" Click="openSubjectFolder_Click" />
                                         </Border>
                                     </StackPanel>
                                 </Border>
@@ -363,7 +377,7 @@
                                         </Border>
 
                                         <Border Width="38" Height="50">
-                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Click="openSubjectFolder_Click" />
+                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Background="{Binding SubjectColor}" Click="openSubjectFolder_Click" />
                                         </Border>
                                     </StackPanel>
                                 </Border>
@@ -388,7 +402,7 @@
                                         </Border>
 
                                         <Border Width="38" Height="50">
-                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Click="openSubjectFolder_Click" />
+                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Background="{Binding SubjectColor}" Click="openSubjectFolder_Click" />
                                         </Border>
                                     </StackPanel>
                                 </Border>
@@ -413,7 +427,7 @@
                                         </Border>
 
                                         <Border Width="38" Height="50">
-                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Click="openSubjectFolder_Click" />
+                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Background="{Binding SubjectColor}" Click="openSubjectFolder_Click" />
                                         </Border>
                                     </StackPanel>
                                 </Border>
@@ -439,7 +453,7 @@
                                         </Border>
 
                                         <Border Width="38" Height="50">
-                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Click="openSubjectFolder_Click" />
+                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Background="{Binding SubjectColor}" Click="openSubjectFolder_Click" />
                                         </Border>
                                     </StackPanel>
                                 </Border>
@@ -464,7 +478,7 @@
                                         </Border>
 
                                         <Border Width="38" Height="50">
-                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Click="openSubjectFolder_Click" />
+                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Background="{Binding SubjectColor}" Click="openSubjectFolder_Click" />
                                         </Border>
                                     </StackPanel>
                                 </Border>
@@ -489,7 +503,7 @@
                                         </Border>
 
                                         <Border Width="38" Height="50">
-                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Click="openSubjectFolder_Click" />
+                                            <Button Style="{DynamicResource subjectFolderOpenIcon}" Uid="{Binding SubjectId}" Tag="{Binding Created}" Content="{Binding SubjectName}" Background="{Binding SubjectColor}" Click="openSubjectFolder_Click" />
                                         </Border>
                                     </StackPanel>
                                 </Border>
