--- a/KuranX.App/Core/Pages/SubjectF/SubjectItemsFrame.xaml
+++ b/KuranX.App/Core/Pages/SubjectF/SubjectItemsFrame.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="KuranX.App.Core.Pages.SubjectItemsFrame"
+﻿<Page x:Class="KuranX.App.Core.Pages.SubjectF.SubjectItemsFrame"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -16,6 +16,10 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="85" />
         </Grid.RowDefinitions>
+
+        <Grid x:Name="loadinGifContent"  Grid.Row="1" Background="#FAFAFA" Panel.ZIndex="5">
+            <Image gif:ImageBehavior.AnimatedSource="/Resource/Images/Gif/Spinner800.gif" Width="250" Height="250"  RenderOptions.BitmapScalingMode="HighQuality" />
+        </Grid>
 
         <Popup x:Name="alph" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="460" Height="200" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">
             <Border  Style="{DynamicResource defaultBorderShadowEffect}" Width="440" Height="180">
@@ -308,7 +312,7 @@
         <Border Grid.Row="0" Width="350" Height="80" Style="{DynamicResource defaultBorderShadowEffect}">
             <StackPanel Orientation="Horizontal">
 
-                <Border Width="12" CornerRadius="5 0 0 5" Background="#66E21F" />
+                <Border x:Name="loadHeaderColor" Width="12" CornerRadius="5 0 0 5" Background="#66E21F" />
                 <Border Width="288" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10 0 10 0">
                     <StackPanel Orientation="Vertical">
                         <TextBlock x:Name="loadHeader" Text="" FontSize="18" Style="{DynamicResource subjectFolderHeader}" />
