--- a/KuranX.App/Core/Pages/TestFrame.xaml
+++ b/KuranX.App/Core/Pages/TestFrame.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:KuranX.App.Core.Pages"
+       xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
        xmlns:gif="http://wpfanimatedgif.codeplex.com"
       mc:Ignorable="d"
       d:DesignHeight="708" d:DesignWidth="1115" d:MaxHeight="708" d:MaxWidth="1270" d:MinWidth="1115"
@@ -11,12 +12,8 @@
 
     <Grid>
 
-        <Label>------------- TEST PAGE -------------</Label>
-        <ComboBox x:Name="comboBox" HorizontalAlignment="Left" SelectedIndex="0" Margin="897,146,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="comboBox_SelectionChanged">
+      
 
-            <ComboBoxItem Content="va" Name="xx"></ComboBoxItem>
-            <ComboBoxItem Content="x2" Name="x1"></ComboBoxItem>
-            <ComboBoxItem Content="x3" Name="x2"></ComboBoxItem>
-        </ComboBox>
+        <!--<Popup x:Name="resetSurepopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="300" Height="190" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">-->
     </Grid>
 </Page>
