--- a/KuranX.App/Core/ResourceXaml/defaultDesign.xaml
+++ b/KuranX.App/Core/ResourceXaml/defaultDesign.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib"
+                    xmlns:cef="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
                     xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks">
 
     <!-- ROOT STYLE -->
@@ -62,5 +63,110 @@
                 <Setter Property="Cursor" Value="Hand" />
             </Trigger>
         </Style.Triggers>
+    </Style>
+
+    <Style x:Key="defaultTabSearchBorder" TargetType="Border">
+
+        <Setter Property="Width" Value="350" />
+        <Setter Property="Height" Value="35" />
+        <Setter Property="BorderThickness" Value="1,1,1,1" />
+        <Setter Property="BorderBrush" Value="#ACACAC" />
+        <Setter Property="CornerRadius" Value="5,5,5,5" />
+        <Setter Property="Margin" Value="0,0,10,0" />
+    </Style>
+
+    <Style x:Key="defaultTabSearchText" TargetType="TextBox">
+
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Height" Value="26" />
+        <Setter Property="FontFamily" Value="{DynamicResource PoppinsMedium}" />
+        <Setter Property="FontSize" Value="12" />
+        <Setter Property="Width" Value="310" />
+        <Setter Property="BorderThickness" Value="0,0,0,0" />
+        <Setter Property="Margin" Value="5,0,5,0" />
+        <Setter Property="HorizontalContentAlignment" Value="Left" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
+
+        <Style.Resources>
+            <VisualBrush x:Key="CueBannerBrush" AlignmentX="Left" AlignmentY="Center" Stretch="None">
+                <VisualBrush.Visual>
+                    <Label FontFamily="{DynamicResource PoppinsMedium}" Margin="5 0 0 0" Content="Ara" Foreground="#991C1E2F" />
+                </VisualBrush.Visual>
+            </VisualBrush>
+        </Style.Resources>
+
+        <Style.Triggers>
+            <Trigger Property="Text" Value="{x:Static sys:String.Empty}">
+                <Setter Property="Background" Value="{DynamicResource CueBannerBrush}" />
+            </Trigger>
+            <Trigger Property="Text" Value="{x:Null}">
+                <Setter Property="Background" Value="{DynamicResource CueBannerBrush}" />
+            </Trigger>
+            <Trigger Property="IsKeyboardFocused" Value="True">
+                <Setter Property="Background" Value="Transparent" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="defaultTabSearchButton" TargetType="Button">
+
+        <Setter Property="Width" Value="20" />
+        <Setter Property="Height" Value="20" />
+        <Setter Property="Foreground" Value="#1C1E2F" />
+        <Setter Property="BorderThickness" Value="0,0,0,0" />
+        <Setter Property="BorderBrush" Value="{x:Null}" />
+        <Setter Property="Background" Value="{x:Null}" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <TextBlock Width="20" Height="20">
+                        <Icon:PackIconOcticons x:Name="searchIcon" Kind="Search" Width="20" Height="20" Foreground="{TemplateBinding Foreground}" VerticalAlignment="Center"  HorizontalAlignment="Center" />
+                    </TextBlock>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Foreground" Value="#C9283E" />
+                <Setter Property="Cursor" Value="Hand" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="pdfWindowItemsButton" TargetType="Button">
+
+        <Setter Property="Background" Value="#fff" />
+        <Setter Property="Foreground" Value="#1C1E2F" />
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Height" Value="56" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border Margin="10" Style="{DynamicResource defaultBorderShadowEffect}" Background="{TemplateBinding Background}" Width="220">
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <TextBlock MaxWidth="180" TextWrapping="Wrap" TextTrimming="CharacterEllipsis" Text="{Binding Path=Content,RelativeSource={RelativeSource TemplatedParent}}"  FontSize="14" FontFamily="{DynamicResource PoppinsRegular}" Foreground="{TemplateBinding Foreground}" />
+                            <Icon:PackIconBootstrapIcons Kind="{Binding Path=Tag,RelativeSource={RelativeSource TemplatedParent}}" Foreground="{TemplateBinding Foreground}" VerticalAlignment="Center" HorizontalAlignment="Right" Width="14" Height="14" Margin="10 0 0 0" />
+                        </StackPanel>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+
+                <Setter Property="Background" Value="#F0433A" />
+                <Setter Property="Foreground" Value="#FFF" />
+                <Setter Property="Cursor" Value="Hand" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="chromium" TargetType="cef:ChromiumWebBrowser">
+        <Setter Property="Grid.Column" Value="0" />
+        <Setter Property="Panel.ZIndex" Value="4" />
+        <Setter Property="Height" Value="572" />
+        <Setter Property="Width" Value="816" />
     </Style>
 </ResourceDictionary>
