--- a/KuranX.App/Core/ResourceXaml/popupDesing.xaml
+++ b/KuranX.App/Core/ResourceXaml/popupDesing.xaml
@@ -95,12 +95,16 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
-                    <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                    <Border  x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
                         <ScrollViewer x:Name="PART_ContentHost" Focusable="false" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden" />
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsFocused" Value="true">
                             <Setter Property="BorderBrush" TargetName="border" Value="#80F0433A" />
+                        </Trigger>
+                        <Trigger Property="IsReadOnly" Value="True">
+                            <Setter Property="Background" Value="#f3f2f7" TargetName="PART_ContentHost" />
+                            <Setter Property="BorderThickness" Value="0" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -148,7 +152,6 @@
     <!-- Label -->
 
     <Style x:Key="popupDefaultTextBoxLabel" TargetType="Label">
-
         <Setter Property="FontFamily" Value="{DynamicResource PoppinsSemiBold}" />
         <Setter Property="Foreground" Value="#1C1E2F" />
         <Setter Property="FontSize" Value="10" />
@@ -406,6 +409,17 @@
                 <Setter Property="Cursor" Value="Hand" />
             </Trigger>
         </Style.Triggers>
+    </Style>
+
+    <Style x:Key="pdfItemShowButton" TargetType="Button" BasedOn="{StaticResource dynamicItemShowButton}">
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <TextBlock Text="Sureye Git" TextAlignment="Left" FontFamily="{TemplateBinding FontFamily}" FontSize="{TemplateBinding FontSize}" Foreground="{TemplateBinding Foreground}" />
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style x:Key="dynamicItemShowSperator" TargetType="Separator">
