--- a/KuranX.App/Core/ResourceXaml/libraryDesing.xaml
+++ b/KuranX.App/Core/ResourceXaml/libraryDesing.xaml
@@ -218,4 +218,57 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <Style x:Key="libnotesbutton" TargetType="Button">
+        <Setter Property="UseLayoutRounding" Value="True" />
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Margin" Value="10 0 0 0" />
+        <Setter Property="BorderThickness" Value="0" />
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border x:Name="border" Background="Transparent" BorderBrush="#E1E3E6" BorderThickness="1" CornerRadius="5" Padding="20 5 20 5">
+                        <StackPanel Orientation="Horizontal">
+                            <Icon:PackIconBootstrapIcons x:Name="icon" Kind="{Binding Path=Tag, RelativeSource={RelativeSource TemplatedParent}}" Width="16" Height="16"  Foreground="#1C1E2F" VerticalAlignment="Center"  HorizontalAlignment="Center" />
+                            <TextBlock  x:Name="text" Text="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" FontSize="12" FontFamily="{DynamicResource PoppinsMedium}" Margin="10 0 0 0" Foreground="#1C1E2F" VerticalAlignment="Center"  HorizontalAlignment="Center" />
+                        </StackPanel>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="#820333" TargetName="border" />
+                            <Setter Property="Foreground" Value="#FFFFFF" TargetName="icon" />
+                            <Setter Property="Foreground" Value="#FFFFFF" TargetName="text" />
+                            <Setter Property="Cursor" Value="Hand" />
+                        </Trigger>
+
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="Background" Value="#820333" TargetName="border" />
+                            <Setter Property="Foreground" Value="#FFFFFF" TargetName="icon" />
+                            <Setter Property="Foreground" Value="#FFFFFF" TargetName="text" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="noteDetail" TargetType="TextBox">
+        <Setter Property="Background" Value="{x:Null}" />
+        <Setter Property="BorderBrush" Value="#ADB5BD" />
+        <Setter Property="Foreground" Value="#383C41" />
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="FontFamily" Value="{DynamicResource PoppinsMedium}" />
+        <Setter Property="Padding" Value="5" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Border  x:Name="border" CornerRadius="5" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                        <ScrollViewer x:Name="PART_ContentHost" Focusable="false" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
